# SegSpy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml
SegSpy/: __init__.py  cli.py  config.py  core.py  io.py
SegSpy/backends/: __init__.py  base.py  registry.py  sam.py  traditional.py
docs/: conf.py  contributing.md  index.md
docs/api-reference/: index.md
docs/architecture/: overview.md
docs/tutorials/: index.md  segment-an-image.md
docs/user-guide/: cli.md  configuration.md  index.md  installation.md  quickstart.md
examples/: segment_dm4.py
src/SegSpy/: __init__.py  cli.py  config.py  core.py  io.py  morphology.py
src/SegSpy/backends/: __init__.py  base.py  registry.py  sam.py  traditional.py
tests/: test_backends_base.py  test_backends_init.py  test_backends_registry.py  test_backends_sam.py  test_backends_traditional.py  test_cli.py  test_config.py  test_core.py  test_io.py  test_morphology.py
